Awesome features have been added. Bugs are fixed. Ready to deploy

--- a/0.htm
+++ b/0.htm
@@ -107,7 +107,7 @@ function clickSwapImg() {}
 		<td>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Nowadays, Turkish Education System is moving in new directions. Now, in many
+Nowadays, Turkish Education System is moving in new directions. Currently, in many
 classrooms, it is rare for a lesson to be taught to rows of children studiously
 bent over worksheets, practicing computations, rules, and formulas. Instead, it
 is more common (I think it will more common) to observe</span><span lang="EN-US">
@@ -132,7 +132,7 @@ importantly, you are not allowed to measure angles with a protractor or measure
 lengths with a ruler. </span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Java will facilitate their learning process and they will learn more about the
+Geogebra will facilitate their learning process and they will learn more about the
 constructions by following the Step-by-step Instructions.</span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
