--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@ function clickSwapImg() {}
 		<img border="1" src="singularity.jpg" width="416" height="145" id="fpAnimswapImgFP2" name="fpAnimswapImgFP2" dynamicanimation="fpAnimswapImgFP2" lowsrc="blue.jpg"></a><p align="center">
 		<b>EVRENİN ŞİİRİ: MATEMATİK</b><p align="center" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px"><b>
 		<font color="#0000CC">Matematik Antik Yunanca &quot;matesis&quot;, &quot;<i>Ben bilirim</i>&quot; 
-		kelimesinden türetilmiştir. &quot;Ben bilirim&quot; insırrı, açtığı akademisinin 
+		kelimesinden türetilmiştir. &quot;Ben bilirim&quot; in sırrı, açtığı akademisinin
 		kapısına &quot;<i>Kendini bil</i>&quot; yazısını asan, Socrates'in sözünde 
 		gizlidir.</font></b><p align="center" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
 		<b>
@@ -40,10 +40,11 @@ function clickSwapImg() {}
 		<p align="center" style="margin-top: 12px; margin-bottom: 18px"><font color="#0000CC"><b>&quot;Matematik ki vardır, gerisi vesairedir!&quot;</b></font><p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="left" style="margin-top: 12px; margin-bottom: 6px">
 		<font color="#0000FF" size="2"><i>Bu site Sinan Sertöz'ün Matematiğin
 		Aydınlık Dünyası adlı kitabından faydalanılarak hazırlanmıştır.
-		<br><b><a href="0.htm">( Click on the link for "Discovering Geometry")</a></b>
+		<br>
+			<b><a href="0.htm">(<span style="color: darkred">Click on the link for "Discovering Geometry</span>)</a></b>
 		</i></font><p align="left" style="margin-top: 12px; margin-bottom: 6px">
 		<font color="#0000FF"><i><font size="2">Tasarım: Mustafa Ali Çetinkaya<br>
-		Son Güncellenme Tarihi: 10/12/2022</font></i></font><p>&nbsp;</td>
+		Son Güncellenme Tarihi: 14/12/2022</font></i></font><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
