--- a/0.htm
+++ b/0.htm
@@ -112,22 +112,24 @@ classrooms, it is rare for a lesson to be taught to rows of children studiously
 bent over worksheets, practicing computations, rules, and formulas. Instead, it
 is more common (I think it will more common) to observe</span><span lang="EN-US">
 <span style="color:blue">children engaging in a whole-class discussion about
-what they have discovered, what has been learned. In other words, they construct
-their own knowledge. Namely, they do geometry instead of dealing with only rules
+what they have discovered, what has been learned. In other words, they<b> construct
+their own knowledge</b>. Namely, they do geometry instead of dealing with only rules
 and formulas. They are actively involved in a wide variety of physical and
 mental actions such as exploring, investigating, patterning, modeling, and
 verifying.</span></span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
 I designed this site to help students for a much greater depth of understanding
-of constructions. They will get idea about constructing geometry by using only a
+of constructions. They will get idea about <b>constructing geometry</b> by using only a
 compass and straight edge.</span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Constructions: The drawing of various shapes using only a compass a
-straightedge. No measurement of lengths or angles is allowed. The word
-construction in geometry has a very specific meaning: the drawing of geometric
-items such as lines and circles using only a compass and straightedge. Very
+<b>Constructions:</b> The drawing of various shapes using only a compass a
+straightedge. No measurement of lengths or angles is allowed.</span></p>
+			<p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
+0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">The word
+construction in geometry has a very specific meaning: "Drawing of geometric
+items such as lines and circles using only a compass and straightedge". Very
 importantly, you are not allowed to measure angles with a protractor or measure
 lengths with a ruler. </span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
@@ -196,7 +198,7 @@ point using only a compass and straight edge.</b></font></p>
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
 		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Set the
-		compass width to a approximately 50% more than the distance to the line.
+		compass width to an approximately 50% more than the distance to the line.
 		The actual width does not matter.</span></font></td>
 	</tr>
 	<tr>
@@ -222,7 +224,7 @@ point using only a compass and straight edge.</b></font></p>
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
 		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">At this
-		point, you can adjust the compass width. Recommended: leave it as is. From each point P,Q, draw circles so that the they cross.</span></font></td>
+		point, you can adjust the compass width. Recommended: leave it as is. From each point P,Q draw circles so that the they cross.</span></font></td>
 	</tr>
 	<tr>
 		<td valign="top" style="padding:.75pt .75pt .75pt .75pt">
@@ -248,7 +250,7 @@ point using only a compass and straight edge.</b></font></p>
 		<font color="#0000FF">
 		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Done.
 		This line is perpendicular to the first line and passes through the
-		point R</span></font></td>
+		point R.</span></font></td>
 	</tr>
 </table>
 <p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
