Content defects are fixed.

--- a/0.htm
+++ b/0.htm
@@ -113,7 +113,7 @@ bent over worksheets, practicing computations, rules, and formulas. Instead, it
 is more common (I think it will more common) to observe</span><span lang="EN-US">
 <span style="color:blue">children engaging in a whole-class discussion about
 what they have discovered, what has been learned. In other words, they<b> construct
-their own knowledge</b>. Namely, they do geometry instead of dealing with only rules
+their own knowledge</b>. Namely, they <b>do geometry</b> instead of dealing with only rules
 and formulas. They are actively involved in a wide variety of physical and
 mental actions such as exploring, investigating, patterning, modeling, and
 verifying.</span></span></p>
