--- a/1.htm
+++ b/1.htm
@@ -164,7 +164,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
   font-family:Arial">Adjust the compass width to the point Q. The compass width
-		is now equal to the length of the line segment PQ.</span></font></td>
+		is now equal to the length of the line segment |PQ|.</span></font></td>
 	</tr>
 	<tr>
 		<td valign="top" style="padding:.75pt .75pt .75pt .75pt">
@@ -175,7 +175,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
   font-family:Arial">Without changing the compass width, place the compass point
-		on the the point R on the line you drew in step 1</span></font></td>
+		on the point R on the line you drew in Step 1.</span></font></td>
 	</tr>
 	<tr>
 		<td valign="top" style="padding:.75pt .75pt .75pt .75pt">
@@ -218,8 +218,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
   font-family:Arial">Done. The new line segment is equal in length (congruent 
-		to) the line segment |</span><span style="font-size:9.0pt;
-  font-family:Arial">PQ</span></font></td>
+		to) the line segment |PQ|.</span></font></td>
 	</tr>
 </table>
 
