New features have been added. Box are fixed.

--- a/hytnmtmtklsn.htm
+++ b/hytnmtmtklsn.htm
@@ -120,7 +120,10 @@ function clickSwapImg() {}
 		</td>
 	</tr>
 	<tr>
-		<td width="226" bgcolor="#FFFF66">&nbsp;<p>&nbsp;</p>
+		<td width="226" bgcolor="#FFFF66" align="center"><p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+			<a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
+			<br>
+			( <em>Platon</em> )</span></a></b>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -129,7 +132,7 @@ function clickSwapImg() {}
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</td>
+		</td>
 	</tr>
 </table>
 
