--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -64,7 +64,7 @@ function clickSwapImg() {}
 			<li>En güzel
 				örneği de eski Çin ideogramlarında. Anlamı &quot;erkek&quot; olan şekilden üç tane
 				olunca anlam &quot;herkes&quot;; "ağaç&quot;
-				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
+				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
 				olan ideogramdan üç tane olduğu zaman da anlam
 				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&quot;dedikodu&quot; olarak değişiyor.</li><br><br>
 			<li>Eski Mısır hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman
@@ -145,23 +145,19 @@ function clickSwapImg() {}
 		</td>
 	</tr>
 	<tr>
-		<td width="226" bgcolor="#FFFF66">&nbsp;<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-&nbsp;<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</td>
+		<td width="226" bgcolor="#FFFF66" align="center"><p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+			<a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
+			<br>
+			( <em>Platon</em> )</span></a></b>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</td>
 	</tr>
 </table>
 
