--- a/index.htm
+++ b/index.htm
@@ -38,13 +38,13 @@ function clickSwapImg() {}
 		yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri, üzüntüleri, 
 		başarı ve yenilgileriyle oluşturdukları bir insanlık macerasıdır. </font></b>
 		<p align="center" style="margin-top: 12px; margin-bottom: 18px"><font color="#0000CC"><b>&quot;Matematik ki vardır, gerisi vesairedir!&quot;</b></font><p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="left" style="margin-top: 12px; margin-bottom: 6px">
-		<font color="#0000FF" size="2"><i>Bu site Sinan Sertöz'ün Matematiğin
-		Aydınlık Dünyası adlı kitabından faydalanılarak hazırlanmıştır.
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<font color="#0000FF" size="2"><i>Bu site Prof. Dr. Ali Sinan Sertöz'ün "Matematiğin
+		Aydınlık Dünyası" adlı kitabından faydalanılarak hazırlanmıştır.
 		<br>
-			<b><a href="0.htm">(<span style="color: darkred">Click on the link for "Discovering Geometry</span>)</a></b>
 		</i></font><p align="left" style="margin-top: 12px; margin-bottom: 6px">
 		<font color="#0000FF"><i><font size="2">Tasarım: Mustafa Ali Çetinkaya<br>
-		Son Güncellenme Tarihi: 14/12/2022</font></i></font><p>&nbsp;</td>
+		Son Güncellenme Tarihi: 18/12/2022</font></i></font><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
@@ -117,8 +117,11 @@ function clickSwapImg() {}
 		</td>
 	</tr>
 	<tr>
-		<td width="226" bgcolor="#FFFF66">&nbsp;<p>&nbsp;</p>
-&nbsp;<p>&nbsp;</p>
+		<td width="226" bgcolor="#FFFF66" align="center">&nbsp;
+		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+			<a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
+			<br>
+			( <em>Platon</em> )</span></a></b>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -127,7 +130,7 @@ function clickSwapImg() {}
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</td>
+		</td>
 	</tr>
 </table>
 
