Bugs are fixed.

--- a/index.htm
+++ b/index.htm
@@ -117,8 +117,7 @@ function clickSwapImg() {}
 		</td>
 	</tr>
 	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">&nbsp;
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+		<td width="226" bgcolor="#FFFF66" align="center">&nbsp<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
 			<a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
 			<br>
 			( <em>Platon</em> )</span></a></b>&nbsp;</p>
