--- a/ckltsi.htm
+++ b/ckltsi.htm
@@ -2,163 +2,188 @@
 <html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="tr">
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
-<title>Matematiğin Aydınlık Dünyası</title>
-<script language="JavaScript" fptype="dynamicanimation">
-<!--
-function dynAnimation() {}
-function clickSwapImg() {}
-//-->
-</script>
-<script language="JavaScript1.2" fptype="dynamicanimation" src="file:///C:/Program%20Files/Microsoft%20Office/OFFICE11/fpclass/animate.js">
-</script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Language" content="tr">
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
+    <title>Matematiğin Aydınlık Dünyası</title>
+    <script language="JavaScript" fptype="dynamicanimation">
+        <!--
+        function dynAnimation() {
+        }
+
+        function clickSwapImg() {
+        }
+
+        //-->
+    </script>
+    <script language="JavaScript1.2" fptype="dynamicanimation"
+            src="file:///C:/Program%20Files/Microsoft%20Office/OFFICE11/fpclass/animate.js">
+    </script>
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
 <style>
-	a {
-		text-decoration: none;
-	}
+    a {
+        text-decoration: none;
+    }
 </style>
 <table border="0" width="90%" cellspacing="7" id="table1">
-	<tr>
-		<td width="111" rowspan="12">&nbsp;</td>
-		<td width="226">&nbsp;<p>&nbsp;</td>
-		<td rowspan="12" width="41">&nbsp;</td>
-		<td rowspan="12" valign="top">
-		&nbsp;<p align="center"><b><a name="c"></a>ÇAKIL TAŞLARINDA BİLİM</b><p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-		<font color="#0000CC"><b>Eskiden çakıl taşları 
-		kullanılarak hesap yapılırdı. Hatta bu iş öyle bir sistematiğe 
-		bağlanmıştı ki hesap yapmak için masalar 
-		vardı. Bu masaların üzerindeki belli çizgilere sayıları temsil etmek 
-		için taşlar konur ve belli 
-		kurallara göre bu taşların yer­leri değiştirildiği zaman dört işlem gerçekleştirilmiş olurdu.</b></font><p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-		<font color="#0000CC"><b>17. yüzyılda Newton ve Leibniz'in geliştirdiği hesap teknikleri o kadar güçlüydü ki her yerde 
-		bu teknikler kullanılmaya 
-		başlandı. Ve bunun sonucu olarak da bu tekniklere bir isim vermek 
-		gerekti. İşte o zaman bu çakıl taşlan 
-		yine gündeme geldi. İnsanlar yüzlerce yıldır beraber oldukları çakıl taşlarını atarken &quot;Hiç 
-		olmazsa ismini tutalım&quot; dediler ve Newton ve Leibniz'in geliştirdiği bu 
-		hesap tekniğine Latince &quot;<i>çakıl 
-		taşı</i>&quot; anlamında &quot;<i>calculus</i>&quot; dendi. Türkçede de biz bu hesap 
-		tekniğine &quot;<i>yüksek matematik</i>&quot; ya 
-		da &quot;<i>analiz</i>&quot; diyoruz.
+    <tr>
+        <td width="111" rowspan="12">&nbsp;</td>
+        <td width="226">&nbsp;<p>&nbsp;</td>
+        <td rowspan="12" width="41">&nbsp;</td>
+        <td rowspan="12" valign="top">
+            &nbsp;<p align="center"><b><a name="c"></a>ÇAKIL TAŞLARINDA BİLİM</b>
+            <p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
+                <font color="#0000CC"><b>Eskiden çakıl taşları
+                    kullanılarak hesap yapılırdı. Hatta bu iş öyle bir sistematiğe
+                    bağlanmıştı ki hesap yapmak için masalar
+                    vardı. Bu masaların üzerindeki belli çizgilere sayıları temsil etmek
+                    için taşlar konur ve belli
+                    kurallara göre bu taşların yer­leri değiştirildiği zaman dört işlem gerçekleştirilmiş
+                    olurdu.</b></font>
+            <p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
+                <font color="#0000CC"><b>17. yüzyılda Newton ve Leibniz'in geliştirdiği hesap teknikleri o kadar
+                    güçlüydü ki her yerde
+                    bu teknikler kullanılmaya
+                    başlandı. Ve bunun sonucu olarak da bu tekniklere bir isim vermek
+                    gerekti. İşte o zaman bu çakıl taşlan
+                    yine gündeme geldi. İnsanlar yüzlerce yıldır beraber oldukları çakıl taşlarını atarken &quot;Hiç
+                    olmazsa ismini tutalım&quot; dediler ve Newton ve Leibniz'in geliştirdiği bu
+                    hesap tekniğine Latince &quot;<i>çakıl
+                        taşı</i>&quot; anlamında &quot;<i>calculus</i>&quot; dendi. Türkçede de biz bu hesap
+                    tekniğine &quot;<i>yüksek matematik</i>&quot; ya
+                    da &quot;<i>analiz</i>&quot; diyoruz.
 
-			<br><br>Yüksek matematiğin
-		ruhunu, ana fikrini size kısaca anlatabilirim. Anlatabilirim çünkü 
-		aradan 300 yıl geçti. Bizim bu 
-		fikirleri hazmetmemiz için yeteri kadar zaman vardı. Yüksek matematik 
-		kısaca şu probleme cevap veriyor; bir 
-		uçak kalkıştan inişe kadar olan sürede en yüksek noktasına nerede erişir? Uçak yükselirken en 
-		yüksek noktasında değil, çünkü hâlâ yükseliyor. İnerken de en yüksek noktasında değil, çünkü her 
-		an iniyor. Demek ki uçağın en yüksek noktası yükselişle alçalış arasında, ne yükselişin ne 
-		de alçalışın olduğu bir yerde. Biz buna teknik olarak &quot;bir fonksiyonun
-		türevini alıp sıfıra 
-		eşitlemek&quot; diyoruz.
-			<br><br>Bakın size bu kadar teknik bir şeyi gayet rahat
-		anlattım. Çünkü 300 yıldır bu 
-		fikirlerin içindeyiz. Oysa 300 yıl önce bu fikirler üniversitede sadece
-		başkalarının &quot;çatlak&quot; dediği 
-		kişiler tarafından konuşulan, araştırma konusu bilgilerdi. Bunları kendi
-		aralarında tartışıyorlar ama 
-		bir avuç kişinin dışında kimse buna inanmıyordu. Peki bugün üniversitelerde araştırma 
-		seviyesinde neler tartışılıyor? Bu &quot;çatlak&quot; dediğimiz kimseler neleri
-		araştırıyor? Bunu bugün 
-		anlatmam elbette<span style="background-color: #FFFFFF; background-position: 0% 0%"> 
+                    <br><br>Yüksek matematiğin
+                    ruhunu, ana fikrini size kısaca anlatabilirim. Anlatabilirim çünkü
+                    aradan 300 yıl geçti. Bizim bu
+                    fikirleri hazmetmemiz için yeteri kadar zaman vardı. Yüksek matematik
+                    kısaca şu probleme cevap veriyor; bir
+                    uçak kalkıştan inişe kadar olan sürede en yüksek noktasına nerede erişir? Uçak yükselirken en
+                    yüksek noktasında değil, çünkü hâlâ yükseliyor. İnerken de en yüksek noktasında değil, çünkü her
+                    an iniyor. Demek ki uçağın en yüksek noktası yükselişle alçalış arasında, ne yükselişin ne
+                    de alçalışın olduğu bir yerde. Biz buna teknik olarak &quot;bir fonksiyonun
+                    türevini alıp sıfıra
+                    eşitlemek&quot; diyoruz.
+                    <br><br>Bakın size bu kadar teknik bir şeyi gayet rahat
+                    anlattım. Çünkü 300 yıldır bu
+                    fikirlerin içindeyiz. Oysa 300 yıl önce bu fikirler üniversitede sadece
+                    başkalarının &quot;çatlak&quot; dediği
+                    kişiler tarafından konuşulan, araştırma konusu bilgilerdi. Bunları kendi
+                    aralarında tartışıyorlar ama
+                    bir avuç kişinin dışında kimse buna inanmıyordu. Peki bugün üniversitelerde araştırma
+                    seviyesinde neler tartışılıyor? Bu &quot;çatlak&quot; dediğimiz kimseler neleri
+                    araştırıyor? Bunu bugün
+                    anlatmam elbette<span style="background-color: #FFFFFF; background-position: 0% 0%">
 		mümkün değil. Bu fikirleri hazmetmemiz için herhalde bir 300 
 		yıl daha geçecek. O zaman bugünkü araştırma konusu olan matematik 
 		problemlerini belki 
 		torunlarımız birbirlerine rahatça anlatabilecekler...<br>
-&nbsp;</span></b></font><p align="center"><span style="text-decoration: none">
-		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" href="#c">
-		<span style="text-decoration: none"><b>Başa Dön</b></span></a></span><p>&nbsp;</td>
-		<td rowspan="12" valign="top" width="4">
-		<p align="center">&nbsp;</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="index.htm"><span style="text-decoration: none">Ana Sayfa</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p><b>Evrensel Dil: Matematik</b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="hytnmtmtklsn.htm"><span style="text-decoration: none">Hayatın Matematik Lisanı</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="ict.htm"><span style="text-decoration: none">İcat mı?, Keşif mi?</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="stlr.htm"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="krl.htm"><span style="text-decoration: none">Bizim de Kralımız Var 
-		</span></a> 
-		</b> </p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="sgdnsy.htm"><span style="text-decoration: none">Sağdan Say</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="sfr.htm"><span style="text-decoration: none">Sıfır Deyip Geçme!</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="ckltsı.htm"><span style="text-decoration: none">
+&nbsp;</span></b></font>
+            <p align="center"><span style="text-decoration: none">
+		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+           onmouseout="rollOut(this)" language="Javascript1.2" href="#c">
+		<span style="text-decoration: none"><b>Başa Dön</b></span></a></span>
+            <p>&nbsp;</td>
+        <td rowspan="12" valign="top" width="4">
+            <p align="center">&nbsp;</td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="index.htm"><span style="text-decoration: none">Ana Sayfa</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p><b>Evrensel Dil: Matematik</b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="hytnmtmtklsn.htm"><span style="text-decoration: none">Hayatın Matematik Lisanı</span></a></b>
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="ict.htm"><span style="text-decoration: none">İcat mı?, Keşif mi?</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="stlr.htm"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="krl.htm"><span style="text-decoration: none">Bizim de Kralımız Var
+		</span></a>
+            </b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="sgdnsy.htm"><span style="text-decoration: none">Sağdan Say</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="sfr.htm"><span style="text-decoration: none">Sıfır Deyip Geçme!</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="ckltsı.htm"><span style="text-decoration: none">
 		</span><span style="text-decoration: none">
 		<a href="ckltsi.htm"><span style="text-decoration: none">Çakıl Taşlarında Bilim 
 		</span></a> 
-		</span></a> 
-		</b> </p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center">
-		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="kmsl.htm"><span style="text-decoration: none">Kumsalda Final</span></a></b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="226" bgcolor="#FFFF66" align="center"><p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-			<a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
+		</span></a>
+            </b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center">
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
+               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="kmsl.htm"><span style="text-decoration: none">Kumsalda Final</span></a></b></p>
+        </td>
+    </tr>
+    <tr>
+        <td width="226" bgcolor="#FFFF66" align="center"><p dynamicanimation="fpAnimformatRolloverFP1"
+                                                            fprolloverstyle="letter-spacing: 1"
+                                                            onmouseover="rollIn(this)" onmouseout="rollOut(this)"
+                                                            language="Javascript1.2"><b>
+            <a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
 			<br>
 			( <em>Platon</em> )</span></a></b>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		</td>
-	</tr>
-	</table>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+        </td>
+    </tr>
+</table>
 
 </body>
 
