New features have been added. Bugs are fixed.

--- a/ict.htm
+++ b/ict.htm
@@ -208,6 +208,13 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+
         </td>
     </tr>
 </table>
