New features have been added. Bugs are fixed.

--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,13 @@ function clickSwapImg() {}
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
 
+<div id="contentframe">
+	<iframe width="420" height="315"
+			src="https://www.youtube.com/embed/LZr_iNxG444?autoplay=1&mute=1"
+			style="height:56%;width:66%;position:absolute;top:500px;left:420px;">&lt;/div&gt;>
+	</iframe>
+</div>
+
 <table border="0" width="90%" cellspacing="7" id="table1">
 	<tr>
 		<td width="111" rowspan="12">&nbsp;</td>
@@ -44,7 +51,7 @@ function clickSwapImg() {}
 		<br>
 		</i></font><p align="left" style="margin-top: 12px; margin-bottom: 6px">
 		<font color="#0000FF"><i><font size="2">Tasarım: Mustafa Ali Çetinkaya<br>
-		Son Güncellenme Tarihi: 22/12/2022</font></i></font><p>&nbsp;</td>
+		Son Güncellenme Tarihi: 14/01/2023</font></i></font><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
