New features have been added. Bugs are fixed.

--- a/hytnmtmtklsn.htm
+++ b/hytnmtmtklsn.htm
@@ -197,6 +197,8 @@ function clickSwapImg() {}
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
+		<p>&nbsp;</p><p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		</td>
 	</tr>
