--- a/kmsl.htm
+++ b/kmsl.htm
@@ -234,6 +234,11 @@ function clickSwapImg() {}
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
+			<p>&nbsp;</p><p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 		</td>
 	</tr>
