New features have been added. Bugs are fixed.

--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -106,7 +106,7 @@ function clickSwapImg() {}
 			<li>Eski Mısır hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman
 				anlam &quot;sel&quot; olarak değişiyor. </li><br><br>
 			<li>&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor.
-				&quot;Bitki&quot; demek olan işaretten üç tane olursa da <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anlam &quot;bitkiler&quot; oluyor.</li>
+				&quot;Bitki&quot; demek olan işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</li>
 
 		</b></font></p><br><br><p align="center"><span style="text-decoration: none">
 		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" href="sgdnsy.htm">
