New features have been added. Bugs are fixed.

--- a/index.htm
+++ b/index.htm
@@ -67,14 +67,14 @@ function clickSwapImg() {}
 		<a onmouseover="var img=document['fpAnimswapImgFP2'];img.imgRolln=img.src;img.src=img.lowsrc?img.lowsrc:img.getAttribute?img.getAttribute('lowsrc'):img.src;" onmouseout="document['fpAnimswapImgFP2'].src=document['fpAnimswapImgFP2'].imgRolln" href="javascript:void(0)">
 		<img border="1" src="singularity.jpg" width="416" height="145" id="fpAnimswapImgFP2" name="fpAnimswapImgFP2" dynamicanimation="fpAnimswapImgFP2" lowsrc="blue.jpg"></a><p align="center">
 		<b>EVRENİN ŞİİRİ: MATEMATİK</b><p align="center" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px"><b>
-		<font color="#0000CC">Matematik Antik Yunanca &quot;matesis&quot;, &quot;<i>Ben bilirim</i>&quot; 
+		<font color="#0000CC">Matematik Antik Yunanca &quot;matesis&quot;, &quot;<i>Ben bilirim</i>&quot;
 		kelimesinden türetilmiştir. &quot;Ben bilirim&quot; in sırrı, açtığı akademisinin
-		kapısına &quot;<i>Kendini bil</i>&quot; yazısını asan, Socrates'in sözünde 
+		kapısına &quot;<i>Kendini bil</i>&quot; yazısını asan, Socrates'in sözünde
 		gizlidir.</font></b><p align="center" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
 		<b>
-		<font color="#0000CC">Matematik, akademisyenlerin loş koridorlarda 
-		birbirlerinin kulağına fısıldadığı anlaşılmaz kavramlardan oluşan bilgiler 
-		yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri, üzüntüleri, 
+		<font color="#0000CC">Matematik, akademisyenlerin loş koridorlarda
+		birbirlerinin kulağına fısıldadığı anlaşılmaz kavramlardan oluşan bilgiler
+		yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri, üzüntüleri,
 		başarı ve yenilgileriyle oluşturdukları bir insanlık macerasıdır. </font></b>
 		<p align="center" style="margin-top: 12px; margin-bottom: 18px"><font color="#0000CC"><b>&quot;Matematik ki vardır, gerisi vesairedir!&quot;</b></font><p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;
 			<br>
@@ -128,14 +128,14 @@ function clickSwapImg() {}
 	<tr>
 		<td width="226" bgcolor="#FFFF66" align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="stlr.htm"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
+		<a href="stlr.html"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
 		</td>
 	</tr>
 	<tr>
 		<td width="226" bgcolor="#FFFF66" align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="krl.htm"><span style="text-decoration: none">Bizim de Kralımız Var 
-		</span></a> 
+		<a href="krl.htm"><span style="text-decoration: none">Bizim de Kralımız Var
+		</span></a>
 		</b> </p>
 		</td>
 	</tr>
@@ -154,8 +154,8 @@ function clickSwapImg() {}
 	<tr>
 		<td width="226" bgcolor="#FFFF66" align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="ckltsi.htm"><span style="text-decoration: none">Çakıl Taşlarında Bilim 
-		</span></a></a> 
+		<a href="ckltsi.htm"><span style="text-decoration: none">Çakıl Taşlarında Bilim
+		</span></a></a>
 		</b> </p>
 		</td>
 	</tr>
