--- a/sfr.htm
+++ b/sfr.htm
@@ -134,7 +134,7 @@ function clickSwapImg() {}
 	<tr>
 		<td width="226" bgcolor="#FFFF66" align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
-		<a href="stlr.htm"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
+		<a href="stlr.html"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
 		</td>
 	</tr>
 	<tr>
