New features have been added. Bugs are fixed.

--- a/hytnmtmtklsn.htm
+++ b/hytnmtmtklsn.htm
@@ -69,35 +69,13 @@ function clickSwapImg() {}
 		<td rowspan="12" width="41">&nbsp;</td>
 		<td rowspan="12" valign="top">
 		&nbsp;<p align="center"><b>HAYATIN MATEMATİK LİSANI</b><p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-		<font color="#0000CC"><b>Bir çok insan için matematik, hayatını zehir 
-		eden derslerden, içine korku salan sınavlardan ve okulu bitirir bitirmez 
-		kurtulacağı bir kabustan ibarettir. Bazıları içinse matematik, hayatı
-		anlamanın ve sevmenin bir 
-		yolu olabilmiştir. Çünkü sevmenin yolu, her şeyde olduğu gibi, burada
-		da anlamaktan geçer. Ancak 
-		anlayabildiğimiz şeyleri severiz.</b></font><p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-		<font color="#0000CC">
-		<span style="font-family: Times New Roman; font-weight: 700">Aristo kapısına “<i>matematik bilmeyen giremez</i>” yazısını asmıştı. 
-		Bununla matematik bilmeyenlerin kendisini 
-		anlamayacaklarını mı kastetmiş, yoksa sadece insanları matematik 
-		öğrenmeye teşvik etmek mi 
-		istemişti, bilemiyoruz. Ancak o zaman bile matematiğe değer verildiğini 
-		anlıyoruz. Milattan 
-		çok önce yaşamış olan Pisagor’un, geometrik şekiller üzerinde çalışırken 
-		keşfettiği dik üçgen 
-		teoremi bugüne kadar tazeliğini korumuş olup, bugün de aynı teorem 
-		öğretilmektedir. Her asırda 
-		gelen insanların bir şeyler eklemesiyle sürekli gelişen matematik, 
-		bugünkü muazzam şeklini 
-		almıştır. Globalleşen dünyadan bu bilim de nasibini almış ve matematik 
-		dünyanın her yerinde 
-		insanların çalıştığı evrensel bir dil olmuştur.</span></font>
+		.</span></font>
 
 			<div id="contentframe">
 				<p align="center">&nbsp;
 
 					<iframe width="420" height="315"
-							src="https://www.youtube.com/embed/PGzeYgNwWug?autoplay=1&mute=1"
+
 							style="position:relative;">
 					</iframe>
 				</p>
