--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class='column'>
             <div class="flex-container">
                 <div><a href="index.html">Ana Sayfa</a></div>
-                <div><a href="hytnmtmtklsn.htm">Hayatın Matematik Lisanı</a></div>
-                <div><a href="ict.htm">İcat mı? / Keşif mi?</a></div>
+                <div><a href="hytnmtmtklsn.html">Hayatın Matematik Lisanı</a></div>
+                <div><a href="ict.html">İcat mı? / Keşif mi?</a></div>
                 <div><a href="stlr.html">Nerede Satılır?</a></div>
-                <div><a href="krl.htm">Bizim de Kralımız Var</a></div>
-                <div><a href="sgdnsy.htm">Sağdan Say</a></div>
-                <div><a href="sfr.htm">Sıfır Deyip Geçme!</a></div>
-                <div><a href="ckltsi.htm">Çakıl Taşlarında Bilim</a></div>
-                <div><a href="kmsl.htm">Kumsalda Final</a></div>
+                <div><a href="krl.html">Bizim de Kralımız Var</a></div>
+                <div><a href="sgdnsy.html">Sağdan Say</a></div>
+                <div><a href="sfr.html">Sıfır Deyip Geçme!</a></div>
+                <div><a href="ckltsi.html">Çakıl Taşlarında Bilim</a></div>
+                <div><a href="kmsl.html">Kumsalda Final</a></div>
                 <div>
                     <div>
                         <a href="0.htm">"Geometri Bilmeyen<br> Bu Kapıdan Giremez!"</a>
@@ -40,23 +40,25 @@
                     <div class="img"></div>
                     <div class="index">
                         <br>
-                        Matematik Antik Yunanca &quot;matesis&quot;, &quot;<i>Ben bilirim</i>&quot;
-                        kelimesinden türetilmiştir.
+                        Matematik Antik Yunanca &quot;matesis&quot;, &quot;<i>Ben bilirim</i>&quot; kelimesinden türetilmiştir.
                         <br>
-                        &quot;Ben bilirim&quot; in sırrı, açtığı akademisinin
-                        kapısına &quot;<i>Kendini bil</i>&quot; yazısını asan, Socrates'in sözünde
+                        &quot;Ben bilirim&quot; in sırrı, açtığı akademisinin kapısına &quot;<i>Kendini bil</i>&quot; yazısını asan, Socrates'in sözünde
                         gizlidir.
                         <br>
-                        Matematik, akademisyenlerin loş koridorlarda
-                        birbirlerinin kulağına fısıldadığı anlaşılmaz kavramlardan oluşan bilgiler
-                        yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri,
-                        üzüntüleri,başarı ve yenilgileriyle oluşturdukları bir insanlık macerasıdır.
+                        Matematik, akademisyenlerin loş koridorlarda birbirlerinin kulağına fısıldadığı anlaşılmaz kavramlardan oluşan bilgiler
+                        yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri, üzüntüleri,başarı ve yenilgileriyle oluşturdukları bir insanlık macerasıdır.
+                    </div>
+
+                    <div class="contact">
+                        <br>
+                        ( Bu site Prof. Dr. Sayın Ali Sinan Sertöz'ün "Matematiğin Aydınlık Dünyası" isimli kitabından yararlanılarak hazırlanmıştır. )
+                        <br>
+                        Tasarım: <a href="linkedin.com/in/mustafa-çetinkaya-b61741216">"Mustafa Ali Çetinkaya"</a>
                     </div>
 
                 </div>
                 <div id="contentFrame">
                     <p align="center">&nbsp;
-
                         <iframe width="100%" height="600px"
                                 src="https://www.youtube.com/embed/LZr_iNxG444?autoplay=1&mute=1"
                                 style="position:relative;">
