--- a/stlr.html
+++ b/stlr.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="charset=utf-8"/>
 
-	<title>Ana Sayfa</title>
+	<title>Nerede Satılır?</title>
 
 	<link rel="stylesheet" href="mainStyle.css">
 </head>
@@ -22,7 +22,7 @@
 				<div><a href="sgdnsy.html">Sağdan Say</a></div>
 				<div><a href="sfr.html">Sıfır Deyip Geçme!</a></div>
 				<div><a href="ckltsi.html">Çakıl Taşlarında Bilim</a></div>
-				<div><a href="kmsl.htm">Kumsalda Final</a></div>
+				<div><a href="kmsl.html">Kumsalda Final</a></div>
 				<div>
 					<div>
 						<a href="0.htm">"Geometri Bilmeyen<br> Bu Kapıdan Giremez!"</a>
