New features have been added. Bugs are fixed.

--- a/stlr.html
+++ b/stlr.html
@@ -66,8 +66,7 @@
 					bu güzelliklere ulaşma heyecanını dile getiriyordu.
 					<br><br>
 					Bilgisizliğin boş ve dingin huzurunu değil, bilginin coşkun mutluluğunu
-					aramak. İşte binlerce yıldır süren bu
-					arayışın adı Matematik.
+					aramak. İşte binlerce yıldır süren bu arayışın adı Matematik.
 
 				</div>
 				<div id="contentFrame">
