New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="charset=utf-8"/>
 
-    <title>Ana Sayfa</title>
+    <title>Matematiğin Aydınlık Dünyası/Ana Sayfa</title>
 
     <link rel="stylesheet" href="mainStyle.css">
 </head>
