New features have been added. Bugs are fixed.

--- a/sgdnsy.html
+++ b/sgdnsy.html
@@ -42,13 +42,13 @@
                     sayılara gerek yoktu; onlara göre her hayvan bir fertti. Onları tanıyorlardı ve bir tanesinin
                     yokluğunu hemen hissedebiliyorlardı. Tavuklar da genellikle altlarında kaç yumurta
                     olduğunu 'bilir' ve eksildiği zaman anlar. Ama insanların bundan daha ayrıntılı bilme biçimlerine
-                    ihtiyaçları vardı. Sayı saymak için önce parmakların kullanıldığını tahmin ediyoruz, çünkü bugün
-                    hâlâ kapalı
-                    kabilelerde parmaklar kullanılıyor. Daha da ilginci Papua adasında sayı saymak için
+                    ihtiyaçları vardı.
+                    <br><br>
+                    Sayı saymak için önce parmakların kullanıldığını tahmin ediyoruz, çünkü bugün
+                    hâlâ kapalı kabilelerde parmaklar kullanılıyor. Daha da ilginci Papua adasında sayı saymak için
                     bileklerini, dirseklerini omuzlarını, kulaklarını ve gözlerini kullanan bir kabile bulunmuş, ilkel
                     sayı sayma yöntemlerinden bir başkası da birçok sayıyı sadece 1 ve 2 kullanarak yazan bir sistem.
-                    Buna
-                    çok benzeyen ikili bir sistem de bugün bilgisayar teknolojisinin temelini oluşturuyor.
+                    Buna çok benzeyen ikili bir sistem de bugün bilgisayar teknolojisinin temelini oluşturuyor.
                     <br><br>
                     Sayı sistemi oluşmaya başladığında insanlar çok uzun bir süre sadece 1 ve 2'yi bildiler. Gerçekten
                     de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu görüyoruz. Belki de en ilginç
@@ -82,7 +82,7 @@
                 <div id="contentFrame">
                     <p align="center">&nbsp;
                         <iframe width="100%" height="600px"
-                                src="https://www.youtube.com/embed/PGzeYgNwWug?autoplay=1&mute=1"
+                                src="https://www.youtube.com/embed/uO4b8PN3hak?autoplay=1&mute=1"
                                 style="position:relative;">
                         </iframe>
                     </p>
