New features have been added. Bugs are fixed.

--- a/ckltsi.htm
+++ b/ckltsi.htm
@@ -72,53 +72,9 @@
         <td width="226">&nbsp;<p>&nbsp;</td>
         <td rowspan="12" width="41">&nbsp;</td>
         <td rowspan="12" valign="top">
-            &nbsp;<p align="center"><b><a name="c"></a>ÇAKIL TAŞLARINDA BİLİM</b>
+            &nbsp;<p align="center"><b><a name="c"></a></b>
             <p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-                <font color="#0000CC"><b>Eskiden çakıl taşları
-                    kullanılarak hesap yapılırdı. Hatta bu iş öyle bir sistematiğe
-                    bağlanmıştı ki hesap yapmak için masalar
-                    vardı. Bu masaların üzerindeki belli çizgilere sayıları temsil etmek
-                    için taşlar konur ve belli
-                    kurallara göre bu taşların yer­leri değiştirildiği zaman dört işlem gerçekleştirilmiş
-                    olurdu.</b></font>
-            <p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-                <font color="#0000CC"><b>17. yüzyılda Newton ve Leibniz'in geliştirdiği hesap teknikleri o kadar
-                    güçlüydü ki her yerde
-                    bu teknikler kullanılmaya
-                    başlandı. Ve bunun sonucu olarak da bu tekniklere bir isim vermek
-                    gerekti. İşte o zaman bu çakıl taşlan
-                    yine gündeme geldi. İnsanlar yüzlerce yıldır beraber oldukları çakıl taşlarını atarken &quot;Hiç
-                    olmazsa ismini tutalım&quot; dediler ve Newton ve Leibniz'in geliştirdiği bu
-                    hesap tekniğine Latince &quot;<i>çakıl
-                        taşı</i>&quot; anlamında &quot;<i>calculus</i>&quot; dendi. Türkçede de biz bu hesap
-                    tekniğine &quot;<i>yüksek matematik</i>&quot; ya
-                    da &quot;<i>analiz</i>&quot; diyoruz.
-
-                    <br><br>Yüksek matematiğin
-                    ruhunu, ana fikrini size kısaca anlatabilirim. Anlatabilirim çünkü
-                    aradan 300 yıl geçti. Bizim bu
-                    fikirleri hazmetmemiz için yeteri kadar zaman vardı. Yüksek matematik
-                    kısaca şu probleme cevap veriyor; bir
-                    uçak kalkıştan inişe kadar olan sürede en yüksek noktasına nerede erişir? Uçak yükselirken en
-                    yüksek noktasında değil, çünkü hâlâ yükseliyor. İnerken de en yüksek noktasında değil, çünkü her
-                    an iniyor. Demek ki uçağın en yüksek noktası yükselişle alçalış arasında, ne yükselişin ne
-                    de alçalışın olduğu bir yerde. Biz buna teknik olarak &quot;bir fonksiyonun
-                    türevini alıp sıfıra
-                    eşitlemek&quot; diyoruz.
-                    <br><br>Bakın size bu kadar teknik bir şeyi gayet rahat
-                    anlattım. Çünkü 300 yıldır bu
-                    fikirlerin içindeyiz. Oysa 300 yıl önce bu fikirler üniversitede sadece
-                    başkalarının &quot;çatlak&quot; dediği
-                    kişiler tarafından konuşulan, araştırma konusu bilgilerdi. Bunları kendi
-                    aralarında tartışıyorlar ama
-                    bir avuç kişinin dışında kimse buna inanmıyordu. Peki bugün üniversitelerde araştırma
-                    seviyesinde neler tartışılıyor? Bu &quot;çatlak&quot; dediğimiz kimseler neleri
-                    araştırıyor? Bunu bugün
-                    anlatmam elbette<span style="background-color: #FFFFFF; background-position: 0% 0%">
-		mümkün değil. Bu fikirleri hazmetmemiz için herhalde bir 300 
-		yıl daha geçecek. O zaman bugünkü araştırma konusu olan matematik 
-		problemlerini belki 
-		torunlarımız birbirlerine rahatça anlatabilecekler...<br>
+        <br>
 &nbsp;</span></b></font>
             <p align="center"><span style="text-decoration: none">
 		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
