--- a/sfr.html
+++ b/sfr.html
@@ -49,7 +49,7 @@
 					geldi. Bu dönemin en önemli iki ismi El Harezmi ve Ömer Hayyam'dır. El Harezmi yazdığı
 					Aktarma ve Kısaltma Bilimi adlı kitabıyla cebirin başlangıcını yapmıştır. Bu kitabında bugün
 					için bize çok basit gelen ama o zaman için büyük teknikler sayılan, bir denklemin bir tarafından öbür
-					tarafına değer aktarma ve bir denklemin içindeki ifadeleri sadeleştirme tekniklerini anlatmıştır.
+					tarafına değer aktarma ve bir denklemin içindeki ifadeleri sadeleştirme tekniklerini anlatmıştır. El Harezmi sıfır rakamını ve "x" bilinmeyenini kullandığı bilinen ilk kişidir.
 				</div>
 				<div id="contentFrame">
 					<p align="center">&nbsp;
