--- a/kmsl.htm
+++ b/kmsl.htm
@@ -68,55 +68,11 @@ function clickSwapImg() {}
 		<td width="226">&nbsp;<p>&nbsp;</td>
 		<td rowspan="12" width="41">&nbsp;</td>
 		<td rowspan="12" valign="top">
-		&nbsp;<p align="center"><b><a name="k"></a>KUMSALDA FİNAL</b><p style="line-height: 200%; margin-top: 12px; margin-bottom: 18px" align="justify">
+		&nbsp;<p align="center"><b><a name="k"></a></b><p style="line-height: 200%; margin-top: 12px; margin-bottom: 18px" align="justify">
 		<font color="#0000CC">
-		<span style="font-family: Times New Roman; font-weight: 700">Newton 1<i>7. </i>yüzyılda yaşamış bir bilim adamıdır. Gökcisimlerinin 
-		birbirini çekmesi gerektiğini düşünmüş ve 
-		bunu matematiksel bir modele oturtabilmiştir. Bu işi yaparken 
-		geliştirdiği teknikler bugün de 
-		kullandığımız en etkili matematik teknikleridir. Doğal olarak böyle bir 
-		insana hayatı boyunca 
-		dâhi denmiştir. O ise buna hep itiraz etmiş, elde ettiklerinin deha 
-		sayesinde değil çok çalışmak 
-		sayesinde elde edildiğini anlatmıştır. Yine kendisine dâhi dendiği bir 
-		gün dayanamamış, şu sözleri 
-		tarihe bırakmıştır:</span></font><p style="line-height: 200%; margin-top: 12px; margin-bottom: 18px" align="justify">
-		<font face="Times New Roman" color="#0000CC"><b>&quot;Biz bilim adamları 
-		kumsalda çakıl taşları arayan çocuklar gibiyizdir. Eğer ben arkadaşlarımdan biraz 
-		daha fazla, biraz daha renkli çakıl taşları toplayabildiysem bunun nedeni dizlerime kadar 
-		suya girmeye cesaret edebilmiş olmamdır.&quot;</b></font><p style="line-height: 200%; margin-top: 12px; margin-bottom: 18px" align="justify">
-		<font color="#0000CC"><b><font face="Times New Roman">Prof. Ali Nesin:
-		</font><span style="font-family: Verdana"><em>
-		<span style="font-family: Times New Roman">“Eğer uzayın farklı bir 
-		yerinde bazı yaratıklar olsaydı ve bu yaratıklar bizim gibi zeki olsaydı, 
-		bizimle aynı matematiği yaparlardı. Demek istediğim matematik bir tane ve biz onu buluyoruz”
-		</span></em></span><font face="Times New Roman">diyor. Kendisinin de 
-		ifadesiyle bu iddia ispatlanamaz ancak üzerinde düşünmeye 
-		değer. İki kere ikinin dört olmadığı bir matematiği düşünmek kolay
-		değil. Biraz daha karmaşık bir örnek üzerinde duralım. y=x</font><sup><span style="font-family: Times New Roman">2</span></sup><span style="font-family: Times New Roman"> 
-		eğrisinin altındaki alanı bugün
-		fonksiyonun integralini alarak kolayca bulabiliyoruz. “0”dan x’e kadar 
-		olan kısmının alanı
-		(l/3)x</span><sup><span style="font-family: Times New Roman">3</span></sup><span style="font-family: Times New Roman"> 
-		yapmaktadır.
-			<br><br>Şimdi Prof. Ali Nesin’in örneğinde olduğu gibi uzayın
-		farklı bir 
-		yerindeki zeki yaratıkların da aynı alanı hesaplaması için bir metot 
-		geliştirdiklerini düşünelim. Onların da (1/3)x</span><sup><span style="font-family: Times New Roman">3</span></sup><font face="Times New Roman"> 
-		değerini bulacaklarından kimsenin şüphesi yoktur. Onların bu metodunu farklı 
-		bir fonksiyona uygulayınca bizim aynı fonksiyona integral uygulayarak 
-		elde edeceğimiz değeri 
-		bulurduk. Onların metotları farklı olabilirdi ancak bizim her işlemimize
-		onların bir metodu 
-		karşılık gelecekti. Yani diller her ne kadar farklı da olsa anlatılan
-		hakikatler hep 
-		aynı olacaktı.</font></b></font><span style="background-position: 0 0"><b><font face="Times New Roman" color="#0000CC">Birbirlerinden binlerce 
-		kilometre ve yüzlerce yıl uzakta yaşamış matematik sevdalıları ortakbir heyecanı taşımışlar ve 
-		aynı maceranın kahramanları olmuşlardır. İşte bu binlerce yıldır süreninsanlığın ortak 
-		macerasının adıdır matematik.</font></b></span><font color="#0000CC"><b><font face="Times New Roman"><br>
-		</font></b></font><span style="font-size: 9.0pt; font-family: Verdana">
-		<br>
-&nbsp;</span><p align="center">
+
+
+			</span><p align="center">
 		<a href="#k" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none"><b>Başa Dön</b></span></a><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
