New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <br>
                         ( Bu site Prof. Dr. Sayın Ali Sinan Sertöz'ün "Matematiğin Aydınlık Dünyası" isimli kitabından yararlanılarak hazırlanmıştır. )
                         <br>
-                        Tasarım: <a href="linkedin.com/in/mustafa-çetinkaya-b61741216">"Mustafa Ali Çetinkaya"</a>
+                        Tasarım: <a href="https://github.com/MustafaAliCetinkaya">"Mustafa Ali Çetinkaya"</a>
                     </div>
 
                 </div>
