New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                         <a href="0.htm"><em>Platon</em></a>
                     </div>
                 </div>
+                <div class="counter">
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                    <div class="elfsight-app-a11f4f86-d00c-4eb1-b226-2ebf179913ed"></div>
+                </div>
             </div>
         </div>
         <div class='row'>
