New features have been added. Bugs are fixed.

--- a/9.htm
+++ b/9.htm
@@ -58,7 +58,7 @@ through a given external point using only a compass and straight edge. </b>
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="1.htm"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
+		<b><a href="1.html"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
