--- a/6.htm
+++ b/6.htm
@@ -57,7 +57,7 @@ only a compass and straightedge.</b></font></p>
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="1.htm"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
+		<b><a href="1.html"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
