--- a/8.htm
+++ b/8.htm
@@ -56,7 +56,7 @@ construct the circumcenter of a triangle using only a compass and straightedge.<
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="1.htm"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
+		<b><a href="1.html"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
 		</td>
 		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
