New features have been added. Bugs are fixed.

--- a/0.html
+++ b/0.html
@@ -39,36 +39,31 @@
 
                 Nowadays, Turkish Education System is moving in new directions. Currently, in many classrooms, it is rare for a lesson to be taught to rows of children studiously bent over worksheets, practicing computations, rules, and formulas. Instead, it is more common (I think it will more common) to observe children engaging in a whole-class discussion about what they have discovered, what has been learned. In other words, they construct their own knowledge. Namely, they do geometry instead of dealing with only rules and formulas. They are actively involved in a wide variety of physical and mental actions such as exploring, investigating, patterning, modeling, and verifying.
 
-                <br><br>I designed this site to help students for a much greater depth of understanding of constructions. They will get idea about constructing geometry by using only a compass and straight edge.
+                <br><br>I designed this site to help students for a much greater depth of understanding of constructions. They will get idea about constructing geometry by using only a compass and straight edge. (<em>Constructions:</em> The drawing of various shapes using only a compass a straightedge. No measurement of lengths or angles is allowed.)
 
-                <br><br>Constructions: The drawing of various shapes using only a compass a straightedge. No measurement of lengths or angles is allowed.
+                <br><br>The word construction in geometry has a very specific meaning: "Drawing of geometric items such as lines and circles using only a compass and straightedge". Very importantly, you are not allowed to measure angles with a protractor or measure lengths with a ruler.
 
-                <br>The word construction in geometry has a very specific meaning: "Drawing of geometric items such as lines and circles using only a compass and straightedge". Very importantly, you are not allowed to measure angles with a protractor or measure lengths with a ruler.
+                <br><br>Dynamic mathematics software given below will facilitate their learning process, and they will learn more about the constructions by following the Step-by-step Instructions. (<em>GeoGebra is a dynamic mathematics software for all levels of education that brings together geometry, algebra, spreadsheets, graphing, statistics and calculus in one engine.</em>) The example shown below may give some idea about what I mean.
 
-                <br><br>Geogebra will facilitate their learning process, and they will learn more about the constructions by following the Step-by-step Instructions. The example shown below may give some idea about what I mean.
+                <br><br><em>This site designed by <span class="linkedin"><a href="https://www.linkedin.com/in/mustafa-çetinkaya-b61741216/">Mustafa Ali Çetinkaya</a></span></em>
+                <h4>Constructing a Perpendicular from an External Point</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li> Place the compass on the given external point R.
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Set the compass width to an approximately 50% more than the distance to the line. The actual width does not matter.
+
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Draw an arc across the line on each side of R, making sure not to adjust the compass width in between.
+
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
+                    <li>At this point, you can adjust the compass width. Recommended: leave it as is. From each point P, Q draw circles so that they cross.
+
                     </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
+                    <li>Align a straightedge between R and the point where the circles intersect. Draw the perpendicular line from R to the line, or beyond if you wish.
+
                     </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
-                    </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
+                    <li>Done. This line is perpendicular to the first line and passes through the point R.
                     </li>
                 </ol>
             </div>
@@ -93,6 +88,15 @@
                     applet.inject('ggb-element');
                 });
             </script>
+        </div>
+        <div class="solutionHeader"><h2 align="center">Sample Construction Solution</h2></div>
+        <div class="sapleSolution">
+            <p align="center">&nbsp;
+            <iframe width="900" height="600"
+                    src="https://www.youtube.com/embed/4cG_E4ZEkZg?autoplay=1&mute=1"
+                    style="position:relative;">
+            </iframe>
+            </p>
         </div>
     </div>
 </nav>
