--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <div><a href="kmsl.html">Kumsalda Final</a></div>
                 <div>
                     <div>
-                        <a href="0.htm">"Geometri Bilmeyen<br> Bu Kapıdan Giremez!"</a>
+                        <a href="0.html">"Geometri Bilmeyen<br> Bu Kapıdan Giremez!"</a>
                     </div>
                     <div>
-                        <a href="0.htm"><em>Platon</em></a>
+                        <a href="0.html"><em>Platon</em></a>
                     </div>
                 </div>
                 <div class="counter">
