New features have been added. Bugs are fixed.

--- a/0.html
+++ b/0.html
@@ -23,7 +23,7 @@
         </div>
         <div class="column">
             <div><a href="0.html">Home</a></div>
-            <div><a href=".html">Copying a Line Segment</a></div>
+            <div><a href="1.html">Copying a Line Segment</a></div>
             <div><a href="0.html">Constructing a 30° Angle</a></div>
             <div><a href=".html">Constructing a 60° Angle</a></div>
             <div><a href=".html">Finding the Center of a Circle</a></div>
@@ -46,8 +46,8 @@
                 <br><br>Dynamic mathematics software given below will facilitate their learning process, and they will learn more about the constructions by following the Step-by-step Instructions. (<em>GeoGebra is a dynamic mathematics software for all levels of education that brings together geometry, algebra, spreadsheets, graphing, statistics and calculus in one engine.</em>) The example shown below may give some idea about what I mean.
 
                 <br><br><em>This site designed by <span class="linkedin"><a href="https://www.linkedin.com/in/mustafa-çetinkaya-b61741216/">Mustafa Ali Çetinkaya</a></span></em>
-                <h4>Constructing a Perpendicular from an External Point</h4>
-                <h5>Step by Step Instructions</h5>
+                <h2>Constructing a Perpendicular from an External Point</h2>
+                <h4>Step by Step Instructions</h4>
                 <ol>
                     <li> Place the compass on the given external point R.
                     </li>
