--- a/1.html
+++ b/1.html
@@ -23,7 +23,7 @@
         </div>
         <div class="column">
             <div><a href="0.html">Home</a></div>
-            <div><a href=".html">Copying a Line Segment</a></div>
+            <div><a href="1.html">Copying a Line Segment</a></div>
             <div><a href="0.html">Constructing a 30° Angle</a></div>
             <div><a href=".html">Constructing a 60° Angle</a></div>
             <div><a href=".html">Finding the Center of a Circle</a></div>
